[metadata]
name = django-google-bazaar-payment
version = 1.0
description = This Django app created for check response token that taken from Google Play or Bazaar is valid or not . and choice with method you want to confirm your purchase with that.
long_description = file: README.rst
url = https://github.com/Milimarty/GooglePlayBazaarIn-app.git
author = MiladNalbandi
author_email = milimarty.mm@gmail.com
license = APACHE LICENSE, VERSION 2.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: X.Y  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: